color fix submit button mobile size

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -174,7 +174,7 @@
     .btn-full:link,
     .btn-full:visited,
     .image-links:link,
-    input[type=submit]{
+    input[type=submit]:link{
         display: inline-block;
         background-color:#7a3a95;
         border: 1px solid #7a3a95;
